1.9 Bertrand Janin <b@janin.com> (YYYY-MM-DD)

	* ?

1.8 Bertrand Janin <b@janin.com> (2013-08-25)

	* Added set hostname configuration flag to prefix the hostname.
	* Added set uid_indicator configuration flag to suffix $ or #
	  depending on whether the user is root or not.
	* If the parent shell allows it, use PWD to get the current directory,
	  this allows prwd to grab the context of the parent shell and show
	  symlinks appropriately.
	* Where there are multiple definitions of the same alias, check which
	  ones point to an existing directory (for -a dump). Resolve aliases
	  one level deep if needed.
	* Allow one level of nested aliases (only as prefix).

1.7 Bertrand Janin <b@janin.com> (2013-05-25)

	* Added -a flag that prints all the aliases starting with '$' in a
	  format that could be passed to eval with eval `prwd -a`. Allowing
	  aliases to be used with other tools via shell variables.
	* Lots of tweaks to the configure and Makefiles to accomodate
	  rpmbuild.

1.6 Bertrand Janin <b@janin.com> (2013-05-04)

	* Fixed segfault in directories that got removed or got their
	  permissions changed.
	* Added primitive support for git HEAD display (initial patch by
	  Stéphane Angel)
	* Fixed alias display with newsgroup mode (#4, by Stéphane Angel)
	* Fixed segfault on long git branch names (#2, by Stéphane Angel)
	* Added a configure script.
	* Fix a buffer overflow.
	* Added -V to get the version.

1.5 Bertrand Janin <b@janin.com> (2011-06-01)

	* Added support for mercurial repository branches.

1.4 Bertrand Janin <b@janin.com> (2009-12-06)

	* First working release.